--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -1,7 +1,8 @@
 body {
     color: #333333;
     font-family: arial;
-    max-width: 650px;
+    max-width: 100vw;
+    width: 50%;
     margin: 0 auto;
     padding: 0 16px;
     display: flex;
